First version of POST affiliate endpoint
