# app/src/ParkimeterAffiliates/AffiliateBundle/Controller/PostController.php
@@ -3,8 +3,8 @@
 namespace ParkimeterAffiliates\AffiliateBundle\Controller;
 
 use ParkimeterAffiliates\Application\Service\Api\Affiliate\AffiliateApiException;
-use ParkimeterAffiliates\Application\Service\Api\Affiliate\GetAffiliate\GetAffiliateRequest;
-use ParkimeterAffiliates\Application\Service\Api\Affiliate\GetAffiliate\GetAffiliateService;
+use ParkimeterAffiliates\Application\Service\Api\Affiliate\PostAffiliate\PostAffiliateService;
+use ParkimeterAffiliates\Application\Service\Api\Affiliate\PostAffiliate\PostAffiliateRequest;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Bundle\FrameworkBundle\Controller\Controller;
@@ -13,15 +13,12 @@ use NilPortugues\Symfony\HalJsonBundle\Serializer\HalJsonResponseTrait;
 use NilPortugues\Symfony\HalJsonBundle\Serializer\HalJsonSerializer as Serializer;
 use ParkimeterAffiliates\Infrastructure\Serializers\JsonVndErrorSerializer as ErrorSerializer;
 
-/**
- * Beer controller.
- */
-class GetController extends Controller
+class PostController extends Controller
 {
     use HalJsonResponseTrait;
 
     /**
-     * @var GetAffiliateService
+     * @var PostAffiliateService
      */
     private $service;
 
@@ -41,15 +38,15 @@ class GetController extends Controller
     private $errorSerializer;
 
     /**
-     * GetAllController constructor.
+     * PostAllController constructor.
      * @param ContainerInterface $container
-     * @param GetAffiliateService $service
+     * @param PostAffiliateService $service
      * @param Serializer $serializer
      * @param ErrorSerializer $errorSerializer
      */
     public function __construct(
         ContainerInterface $container,
-        GetAffiliateService $service,
+        PostAffiliateService $service,
         Serializer $serializer,
         ErrorSerializer $errorSerializer
     ) {
@@ -60,33 +57,27 @@ class GetController extends Controller
     }
 
     /**
-     * @Swagger\Annotations\Get(
-     *  path="/affiliates/{id}",
-     *  summary="Finds an affiliate by affiliateId.",
-     *  operationId="getAffiliate",
+     * @Swagger\Annotations\Post(
+     *  path="/affiliates/",
+     *  summary="Creates an affiliate",
+     *  operationId="postAffiliate",
      *  produces={"application/json"},
      *  tags={"Affiliates"},
      *  @Swagger\Annotations\Parameter(
-     *      name="id",
-     *      in="path",
-     *      description="Affiliate Id",
+     *      name="body",
+     *      in="body",
+     *      description="Affiliate object",
      *      required=true,
-     *      type="string"
+     *      type="string",
+     *      @Swagger\Annotations\Schema(ref="#/definitions/PostAffiliateControllerInputSwagger"),
      *  ),
-     *
      *  @Swagger\Annotations\Response(
-     *     response=200,
-     *     description="Success",
-     *     @Swagger\Annotations\Schema(ref="#/definitions/SwaggerGetAffiliateSuccessResponse"),
+     *     response=201,
+     *     description="Created",
      *  ),
      *  @Swagger\Annotations\Response(
      *     response="400",
      *     description="Bad Request",
-     *     @Swagger\Annotations\Schema(ref="#/definitions/SwaggerErrorResponse"),
-     *  ),
-     *  @Swagger\Annotations\Response(
-     *     response="404",
-     *     description="Not Found",
      *     @Swagger\Annotations\Schema(ref="#/definitions/SwaggerErrorResponse"),
      *  ),
      *  @Swagger\Annotations\Response(
@@ -99,19 +90,23 @@ class GetController extends Controller
      * @param $request Request
      * @return \Symfony\Component\HttpFoundation\Response
      */
-    public function getAction(Request $request)
+    public function postAction(Request $request)
     {
         try {
-            $affiliateId = $request->attributes->get('id');
-            $dto = new GetAffiliateRequest($affiliateId);
+            $data = json_decode($request->getContent());
 
-            $affiliate = ($this->service)($dto);
-            $output = $this->serializer->serialize($affiliate);
+            $dto = new PostAffiliateRequest(
+                (property_exists($data, 'name')) ? $data->name : null,
+                (property_exists($data, 'last_name')) ? $data->last_name : null,
+                (property_exists($data, 'email')) ? $data->email : null
+            );
+
+            ($this->service)($dto);
         } catch (AffiliateApiException $e) {
             $output = $this->errorSerializer->serialize($e->errorBag());
             return new Response($output, $e->getCode(), ['Content-type' => 'application/vnd.error+json']);
         }
 
-        return $this->response($output);
+        return $this->resourceCreatedResponse('');
     }
 }
