# app/src/ParkimeterAffiliates/AffiliateBundle/Controller/Swagger/PostAffiliateControllerInputSwagger.php
@@ -3,28 +3,10 @@
 namespace ParkimeterAffiliates\AffiliateBundle\Controller\Swagger;
 
 /**
- * @Swagger\Annotations\Definition(type="object")
+ * @Swagger\Annotations\Definition
  */
-abstract class SwaggerGetAffiliateSuccessResponse
+class PostAffiliateControllerInputSwagger
 {
-    /**
-     * @Swagger\Annotations\Property(format="string", property="id")
-     * @var string
-     */
-    protected $id;
-
-    /**
-     * @Swagger\Annotations\Property(format="int", property="status_id")
-     * @var int
-     */
-    protected $statusId;
-
-    /**
-     * @Swagger\Annotations\Property(format="string", property="key")
-     * @var string
-     */
-    protected $key;
-
     /**
      * @Swagger\Annotations\Property(format="string", property="name")
      * @var string
@@ -44,10 +26,9 @@ abstract class SwaggerGetAffiliateSuccessResponse
     protected $email;
 
     /**
-     * @Swagger\Annotations\Property(ref="#/definitions/SwaggerSelfLink", property="_links")
+     * PutAffiliateControllerInputSwagger constructor.
+     * @throws \Exception
      */
-    protected $links = [];
-
     public function __construct()
     {
         throw new \Exception("This is Swagger documentation");
