# src/Application/Service/Api/Affiliate/PostAffiliate/PostAffiliateService.php
@@ -1,0 +1,48 @@
+<?php
+
+namespace ParkimeterAffiliates\Application\Service\Api\Affiliate\PostAffiliate;
+
+use ParkimeterAffiliates\Application\Service\Api\Affiliate\AffiliateApiException;
+use ParkimeterAffiliates\Domain\Model\Affiliate;
+use ParkimeterAffiliates\Domain\Model\AffiliateRepository;
+
+final class PostAffiliateService
+{
+    /**
+     * @var AffiliateRepository
+     */
+    private $repository;
+
+    /**
+     * PostAffiliateService constructor
+     * @param AffiliateRepository $repository
+     */
+    public function __construct(
+        AffiliateRepository $repository
+    ) {
+        $this->repository = $repository;
+    }
+
+    /**
+     * Returns a affiliate by given data
+     *
+     * @param PostAffiliateRequest $request
+     * @throws AffiliateApiException
+     */
+    public function __invoke(PostAffiliateRequest $request)
+    {
+        try {
+            $affiliate = new Affiliate();
+
+            $affiliate->setName($request->name());
+            $affiliate->setLastName($request->lastName());
+            $affiliate->setEmail($request->email());
+            $affiliate->generateAffiliateKey();
+            $affiliate->verify();
+
+            $this->repository->save($affiliate);
+        } catch (\Exception $e) {
+            throw AffiliateApiException::fromException($e);
+        }
+    }
+}
